# snek

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  core.rs  error.rs  filter.rs  lib.rs  log.rs  main.rs  message.rs  sender.rs  target.rs  upload.rs  watcher.rs
src/golem/: cast.rs  character.rs  mod.rs  modifier.rs  skill.rs
src/parse/: event.rs  evtc.rs  mod.rs
tests/: daily.rs
