[package]
name = "snek"
version = "1.0.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
byteorder = "1.3.4"
notify = "5.0.0-pre.3"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
bincode = "1.3.1"
tokio = { version = "0.2.22", default-features = false, features = ["rt-threaded", "macros", "fs", "stream"] }
futures = "0.3.5"
zip = "0.5.7"
serde_json = "1.0.57"
crossbeam-channel = "0.4.4"
ctrlc = "3.1.6"
dirs = "3.0.1"
flexi_logger = "0.15.12"
log = "0.4.11"
url = "2.1.1"

[features]
golem = []
default = []

[dev-dependencies]
hyper = "0.13.7"
bytes = "0.5.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
